--- a/_engine/player.html
+++ b/_engine/player.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
-<html>
+<!-- INJECTS IE CLASSES ONTO HTML TAG -->
+<!--[if IE 8 ]>    <html class="IE8"> <![endif]-->
+<!--[if IE 9 ]>    <html class="IE9"> <![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!--> <html class=""> <!--<![endif]-->
 	<head>
-		<title>HTML Widget Engine</title>
+		<title>Enigma Widget Player</title>
 		<meta charset="utf-8" />
-		<style type="text/css"></style>
-		<script type="text/javascript" src="/js/materia.require.js"></script>
-		<link rel="stylesheet/less" type="text/css" href="css/widget.css">
-		<script type="text/javascript">
-			require(['enginecore', 'score'], function(util) {
-				Materia.Engine.start(Crossword.Engine);
-			});
-		</script>
-		<script src='js/widget.js'></script>
+
+		<!-- STYLESHEETS -->
+		<link rel="stylesheet" type="text/css" href="player.css">
+
+		<!-- REQUIRED MATERIA JAVASCRIPT -->
+		<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+		<script type="text/javascript" src="/js/materia.enginecore.js"></script>
+		<script type="text/javascript" src="/js/materia.score.js"></script>
+
+		<!-- OPTIONAL MATERIA JAVASCRIPT -->
+		<!-- <script type="text/javascript" src="/js/materia.storage.manager.js"></script> -->
+		<!-- <script type="text/javascript" src="/js/materia.storage.table.js"></script> -->
+
+		<!-- YOUR PREREQUISITES -->
+
+		<!-- MAIN PLAYER SCRIPT -->
+		<script src="player.js"></script>
 	</head>
 	<body>
 	<div id="board" class="screen board">
@@ -44,5 +55,11 @@
 		<div class='button' data-i='{{i}}' id='freewordbtn_{{i}}'>Free word</div>
 		<span class='hintspot' id='hintspot_{{i}}'></span>
 	</div>
+
+	<!-- INITIALIZE -->
+	<script type="text/javascript">
+		Materia.Engine.start(Crossword.Engine);
+	</script>
+
 	</body>
 </html>
