crossword allows special charaters in puzzle answers again

--- a/player.html
+++ b/player.html
@@ -4,7 +4,7 @@
 <!--[if IE 9 ]>    <html class="IE9"> <![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!--> <html class=""> <!--<![endif]-->
 	<head>
-		<title>Crossword Widget Player</title>
+		<title>Crossword</title>
 		<meta charset="utf-8" />
 
 		<!-- STYLESHEETS -->
