Fixes special character input, scoring, variable names, and ui board math
Special characters now are shown to the player and treated like spaces
Initial zoom out animation fixed to be more accurate
All math associated with board size, location, etc heavily cleaned up
Variable names cleaned up to clerify use.

--- a/player.html
+++ b/player.html
@@ -47,7 +47,9 @@
 				<input type='button' value='Submit Answers' id='checkBtn' class='button submit'>
 			</div>
 		</div>
-		<div id='movable' class='crossword-board'></div>
+		<div id="movable-container">
+			<div id='movable' class='crossword-board'></div>
+		</div>
 		<div id='clues'>
 			<span style='display:none'>Clues</span>
 		</div>
