Virtual keyboard created.

--- a/player.html
+++ b/player.html
@@ -50,6 +50,40 @@
 			<div id='controlbar'>
 				<span id='freeWordsRemaining'></span>
 			</div>
+			<div id='specialInput' class='down'>
+				<div id='specialInputHead'>Special Characters</div>
+				<div id='specialInputBody'>
+					<span>Á</span>
+					<span>À</span>
+					<span>Â</span>
+					<span>Ä</span>
+					<span>Ã</span>
+					<span>Å</span>
+					<span>Æ</span>
+					<span>Ç</span>
+					<span>É</span>
+					<span>È</span>
+					<span>Ê</span>
+					<span>Ë</span>
+					<span>Í</span>
+					<span>Ì</span>
+					<span>Î</span>
+					<span>Ï</span>
+					<span>Ñ</span>
+					<span>Ó</span>
+					<span>Ò</span>
+					<span>Ô</span>
+					<span>Ö</span>
+					<span>Õ</span>
+					<span>Ø</span>
+					<span>Œ</span>
+					<span>ß</span>
+					<span>Ú</span>
+					<span>Ù</span>
+					<span>Û</span>
+					<span>Ü</span>
+				</div>
+			</div>
 		</div>
 
 		<div id='backgroundcover' class='fade'></div>
