--- a/player.html
+++ b/player.html
@@ -20,6 +20,7 @@
 
 		<!-- YOUR PREREQUISITES -->
 		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+		<script src="hammer.min.js"></script>
 		<script src="classList.min.js"></script>
 
 		<!-- MAIN PLAYER SCRIPT -->
@@ -27,62 +28,60 @@
 	</head>
 
 	<body>
-		<div id="board" class="screen board">
-			<textarea type='text' id='boardinput' autocomplete='off' autocorrect='off' autocapitalize='off' autocapitalize="off" spellcheck="false"></textarea>
-
-			<div class="header">
-				<div class='logo'></div>
-				<h1 id='title'></h1>
-				<div class='icon-print' id='printbtn' title='Print'></div>
-				<div class='submitholder'>
-					<input type='button' value='Submit Answers' id='checkBtn' class='button submit'>
-				</div>
+		<div class="header">
+			<div class='logo'></div>
+			<h1 id='title'></h1>
+			<div class='icon-print' id='printbtn' title='Print'></div>
+			<div class='submitholder'>
+				<input type='button' value='Submit Answers' id='checkBtn' class='button submit'>
 			</div>
-
+		</div>
+		<div id="board" class="screen board">
 			<div id="movable-container">
 				<div id='movable' class='crossword-board'></div>
 			</div>
+		</div>
+		<textarea type='text' id='boardinput' autocomplete='off' autocorrect='off' autocapitalize='off' autocapitalize="off" spellcheck="false"></textarea>
 
-			<div id='clues'>
-				<span style='display:none'>Clues</span>
-			</div>
+		<div id='clues'>
+			<span style='display:none'>Clues</span>
+		</div>
 
-			<div id='controlbar'>
-				<span id='freeWordsRemaining'></span>
-			</div>
-			<div id='specialInput' class='down'>
-				<div id='specialInputHead'>Special Characters</div>
-				<div id='specialInputBody'>
-					<span>Á</span>
-					<span>À</span>
-					<span>Â</span>
-					<span>Ä</span>
-					<span>Ã</span>
-					<span>Å</span>
-					<span>Æ</span>
-					<span>Ç</span>
-					<span>É</span>
-					<span>È</span>
-					<span>Ê</span>
-					<span>Ë</span>
-					<span>Í</span>
-					<span>Ì</span>
-					<span>Î</span>
-					<span>Ï</span>
-					<span>Ñ</span>
-					<span>Ó</span>
-					<span>Ò</span>
-					<span>Ô</span>
-					<span>Ö</span>
-					<span>Õ</span>
-					<span>Ø</span>
-					<span>Œ</span>
-					<span>ß</span>
-					<span>Ú</span>
-					<span>Ù</span>
-					<span>Û</span>
-					<span>Ü</span>
-				</div>
+		<div id='controlbar'>
+			<span id='freeWordsRemaining'></span>
+		</div>
+		<div id='specialInput' class='down'>
+			<div id='specialInputHead'>Special Characters</div>
+			<div id='specialInputBody'>
+				<span>Á</span>
+				<span>À</span>
+				<span>Â</span>
+				<span>Ä</span>
+				<span>Ã</span>
+				<span>Å</span>
+				<span>Æ</span>
+				<span>Ç</span>
+				<span>É</span>
+				<span>È</span>
+				<span>Ê</span>
+				<span>Ë</span>
+				<span>Í</span>
+				<span>Ì</span>
+				<span>Î</span>
+				<span>Ï</span>
+				<span>Ñ</span>
+				<span>Ó</span>
+				<span>Ò</span>
+				<span>Ô</span>
+				<span>Ö</span>
+				<span>Õ</span>
+				<span>Ø</span>
+				<span>Œ</span>
+				<span>ß</span>
+				<span>Ú</span>
+				<span>Ù</span>
+				<span>Û</span>
+				<span>Ü</span>
 			</div>
 		</div>
 
