#854 Removed unused font files. Rebuilt fonts to include zoom out icon. Updated icon references in CSS. Modified player to zoom out on demand, and zoom back in when clicking a letter.

--- a/player.html
+++ b/player.html
@@ -32,6 +32,7 @@
 			<div class='logo'></div>
 			<h1 id='title'></h1>
 			<div class='icon-print' id='printbtn' title='Print'></div>
+			<div class='icon-zoomout' id='zoomout' title='Zoom Out'></div>
 			<div class='submitholder'>
 				<input type='button' value='Submit Answers' id='checkBtn' class='button submit'>
 			</div>
