added calls for hideScoresOverview, hideResultsTable, setHeight

--- a/src/scoreScreen.html
+++ b/src/scoreScreen.html
@@ -52,6 +52,8 @@
 
 		<!-- INITIALIZE -->
 		<script>
+			/* Materia.ScoreCore.hideScoresOverview(); hide the upper score box */
+			Materia.ScoreCore.hideResultsTable(); /* hide the lower results table */
 			Materia.ScoreCore.start(Crossword.ScoreScreen);
 		</script>
 
