--- a/src/player.html
+++ b/src/player.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
-<!-- INJECTS IE CLASSES ONTO HTML TAG -->
-<!--[if IE 8 ]>    <html class="IE8"> <![endif]-->
-<!--[if IE 9 ]>    <html class="IE9"> <![endif]-->
-<!--[if (gt IE 9)|!(IE)]><!--> <html class=""> <!--<![endif]-->
+<html>
 	<head>
 		<title>Crossword</title>
 		<meta charset="utf-8" />
@@ -20,7 +17,6 @@
 		<!-- YOUR PREREQUISITES -->
 		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 		<script src="hammer.min.js"></script>
-		<script src="classList.min.js"></script>
 
 		<!-- MAIN PLAYER SCRIPT -->
 		<script src="player.js" data-embed></script>
