--- a/src/creator.html
+++ b/src/creator.html
@@ -138,7 +138,7 @@
 			<img src='assets/creator_example.png'>
 			<h1>Crossword</h1>
 			<p>Enter <b>words</b> to build a puzzle.</p>
-			<p>Addd <b>clues &amp; hints</b> to help students guess the words.</p>
+			<p>Add <b>clues &amp; hints</b> to help students guess the words.</p>
 			<p>Set <b>options</b> that define how hints and free words impact the score.</p>
 			<hr>
 			<b>Start by giving your Crossword widget a title</b><br>
