#9 The letter grid now has some pretty verbose descriptive options for screen readers. Last thing might be getting tab order worked out and enriching the submit button to list out progress etc., also locking letters when taking a free word.

--- a/src/player.html
+++ b/src/player.html
@@ -36,7 +36,7 @@
 				Use the Tab key to switch between the list of words and the answer grid.
 			</div>
 			<div class='submitholder'>
-				<input type='button' id='checkBtn' class='button submit' value='Submit Answers'>
+				<input type='button' id='checkBtn' class='button submit' value='Submit Answers' tabindex='4'>
 			</div>
 		</div>
 		<div id='board-reader' class='reader-instructions' aria-live='polite'></div>
