--- a/src/player.html
+++ b/src/player.html
@@ -49,7 +49,7 @@
 			</div>
 		</div>
 
-		<div id='clue-reader' class='reader-instructions'></div>
+		<div id='clue-reader' class='reader-instructions' aria-live='polite'></div>
 		<div id='clues'
 			role='list'
 			aria-describedby='clue-reader'
