--- a/src/player.html
+++ b/src/player.html
@@ -5,32 +5,42 @@
 		<meta charset="utf-8" />
 
 		<!-- STYLESHEETS -->
-		<link rel="stylesheet" type="text/css" href="player.css" data-embed>
+		<link rel="stylesheet" type="text/css" href="player.css">
 		<link href='//fonts.googleapis.com/css?family=Roboto+Slab:400,300|Delius+Unicase' rel='stylesheet' type='text/css'>
 
 		<!-- REQUIRED MATERIA JAVASCRIPT -->
 		<script src="materia.enginecore.js"></script>
-
-		<!-- OPTIONAL MATERIA JAVASCRIPT -->
-		<script src="print.js" data-embed></script>
 
 		<!-- YOUR PREREQUISITES -->
 		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 		<script src="hammer.min.js"></script>
 
 		<!-- MAIN PLAYER SCRIPT -->
-		<script src="player.js" data-embed></script>
+		<script src="player.js"></script>
 	</head>
 
 	<body>
-		<div class="header"
-			aria-labelledby='title'
-			tabindex='1'>
+		<div id='widget-header'
+			class='header'>
 			<div class='logo'></div>
-			<h1 id='title'
-				aria-label='Use the Tab key to select the list of clues.'></h1>
-			<div class='icon-print' id='printbtn' title='Print' aria-hidden></div>
-			<div class='icon-zoomout' id='zoomout' title='Zoom Out' aria-hidden></div>
+			<h1 id='title' aria-describedby='widget-reader' tabindex='1'></h1>
+			<div id='title-instructions' class='reader-instructions'>Use the Tab key to select the list of clues.</div>
+			<div id='keyboard-instructions'
+				class='invisible-until-focused button'
+				aria-labelledby='title-instructions'
+				tabindex='2'>
+				Keyboard Instructions
+			</div>
+			<div id='printbtn'
+				class='icon-print'
+				title='Print'
+				aria-label='Print. Press the Enter key to produce a printout for this Crossword puzzle.'
+				tabindex='6'></div>
+			<div id='zoomout'
+				class='icon-zoomout'
+				title='Zoom Out'
+				aria-label='Zoom Out. Press the Enter key to select the letter grid.'
+				tabindex='7'></div>
 			<div class='submitholder'>
 				<div id='submit-progress-reader' class='reader-instructions'>There are empty letter tiles.</div>
 				<input id='checkBtn'
@@ -38,7 +48,7 @@
 					class='submit button'
 					value='Submit Answers'
 					aria-describedby='submit-progress-reader'
-					tabindex='3'>
+					tabindex='4'>
 			</div>
 		</div>
 		<div id='board-reader' class='reader-instructions' aria-live='polite'></div>
@@ -53,14 +63,14 @@
 		<div id='clues'
 			role='list'
 			aria-describedby='clue-reader'
-			tabindex='2'>
+			tabindex='3'>
 			<span style='display:none'>Clues</span>
 		</div>
 
-		<div id='controlbar'>
-			<span id='freeWordsRemaining'
-				tabindex='-1'
-				aria-hidden>
+		<div id='controlbar'
+			tabindex='-1'
+			aria-hidden>
+			<span id='freeWordsRemaining'>
 			</span>
 		</div>
 		<div id='specialInput' class='down'>
@@ -98,10 +108,18 @@
 		</div>
 
 		<div id='backgroundcover' class='fade'></div>
-		<div id='alertbox' class='fade' tabindex='4'>
+		<div id='alertbox'
+			class='fade'
+			aria-labelledby='alertcaption alert-instructions'
+			tabindex='5'>
 			<div id='alertcaption'></div>
-			<input id='cancelbtn' class='cancel button' type='button'>
+			<div id='alert-instructions' class='reader-instructions'>Use the Tab key to cancel or confirm.</div>
+			<input id='cancelbtn'
+				aria-label='Cancel.'
+				class='cancel button'
+				type='button'>
 			<input id='okbtn'
+				aria-label='Confirm.'
 				type='button'
 				class='submit button'
 				aria-describedby='submit-progress-reader'>
