--- a/src/player.html
+++ b/src/player.html
@@ -108,22 +108,24 @@
 				</div>
 			</div>
 
-			<div id='backgroundcover' class='fade'></div>
-			<div id='alertbox'
-				class='fade'
-				aria-labelledby='alertcaption alert-instructions'
-				tabindex='5'>
-				<div id='alertcaption'></div>
-				<div id='alert-instructions' class='reader-instructions'>Use the Tab key to cancel or confirm.</div>
-				<input id='cancelbtn'
-					aria-label='Cancel.'
-					class='cancel button'
-					type='button'>
-				<input id='okbtn'
-					aria-label='Confirm.'
-					type='button'
-					class='submit button'
-					aria-describedby='submit-progress-reader'>
+			<div id='backgroundcover' class='fade'>
+				<div id='alertbox'
+					aria-labelledby='alertcaption alert-instructions'
+					tabindex='5'>
+					<div id='alertcaption'></div>
+					<div id='alert-instructions' class='reader-instructions'>Use the Escape key to cancel or the Return or Enter key to confirm.</div>
+					<input id='cancelbtn'
+						aria-label='Cancel.'
+						class='cancel button'
+						tabindex='0'
+						type='button'>
+					<input id='okbtn'
+						aria-label='Confirm.'
+						tabindex='0'
+						type='button'
+						class='submit button'
+						aria-describedby='submit-progress-reader'>
+				</div>
 			</div>
 
 			<div id='t_hints' style='display:none' class="clue">
